some photos added

--- a/src/index.html
+++ b/src/index.html
@@ -775,7 +775,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Stickers & Labels</h3>
+                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Mobile apps</h3>
                 <p class="text-base font-heading text-dark-text">bumper, windshield, qr codes, jars, food, box, any </p>
               </div>
             </div>
@@ -842,7 +842,7 @@
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div class="wow fadeInUp group mx-auto mb-10 max-w-[300px] text-center xs:max-w-[370px]" data-wow-delay=".2s">
               <div class="relative mb-8 overflow-hidden rounded">
-                <img src="./images/team/image-1.jpg" alt="team-image" class="w-full" />
+                <img src="./images/team/landingpageicon.png" alt="team-image" class="w-full" />
                 <div class="absolute transition duration-300 -translate-x-1/2 translate-y-10 opacity-0 bottom-6 left-1/2 group-hover:translate-y-0 group-hover:opacity-100">
                   <div class="flex items-center justify-center space-x-3">
                     <a
@@ -890,7 +890,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Marketing Materials:</h3>
+                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Websites</h3>
                 <p class="text-base font-heading text-dark-text">business cards, bucklets, catalogs, postcards, posters, flyers, badges</p>
               </div>
             </div>
@@ -898,7 +898,7 @@
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div class="wow fadeInUp group mx-auto mb-10 max-w-[300px] text-center xs:max-w-[370px]" data-wow-delay=".25s">
               <div class="relative mb-8 overflow-hidden rounded">
-                <img src="./images/team/image-2.jpg" alt="team-image" class="w-full" />
+                <img src="./images/team/mobileappicon.png" alt="team-image" class="w-full" />
                 <div class="absolute transition duration-300 -translate-x-1/2 translate-y-10 opacity-0 bottom-6 left-1/2 group-hover:translate-y-0 group-hover:opacity-100">
                   <div class="flex items-center justify-center space-x-3">
                     <a
@@ -946,7 +946,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Stickers & Labels</h3>
+                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Mobile Apps</h3>
                 <p class="text-base font-heading text-dark-text">bumper, windshield, qr codes, jars, food, box, any </p>
               </div>
             </div>
@@ -954,7 +954,7 @@
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div class="wow fadeInUp group mx-auto mb-10 max-w-[300px] text-center xs:max-w-[370px]" data-wow-delay=".3s">
               <div class="relative mb-8 overflow-hidden rounded">
-                <img src="./images/team/image-3.jpg" alt="team-image" class="w-full" />
+                <img src="./images/team/datavizualicon.png" alt="team-image" class="w-full" />
                 <div class="absolute transition duration-300 -translate-x-1/2 translate-y-10 opacity-0 bottom-6 left-1/2 group-hover:translate-y-0 group-hover:opacity-100">
                   <div class="flex items-center justify-center space-x-3">
                     <a
@@ -1002,7 +1002,7 @@
                 </div>
               </div>
               <div>
-                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Signs, Banners & Decals </h3>
+                <h3 class="mb-1 text-xl font-medium font-heading text-dark dark:text-white sm:text-2xl">Data visualization </h3>
                 <p class="text-base font-heading text-dark-text">indoor and outdoor banners, Vinyl Decals for car </p>
               </div>
             </div>
